Fixed jump on focus border

--- a/src/global/less/corporate-ui/forms.less
+++ b/src/global/less/corporate-ui/forms.less
@@ -416,7 +416,7 @@ select {
 .custom-select {
   font-size: inherit;
   width: 100%;
-  border: 0;
+  border: 1px solid transparent;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
